include(viconTaskLib)
ADD_LIBRARY(${VICON_TASKLIB_NAME} SHARED 
    ${VICON_TASKLIB_SOURCES})


TARGET_LINK_LIBRARIES(${VICON_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${VICON_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${VICON_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${VICON_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${VICON_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${VICON_TASKLIB_HEADERS}
    DESTINATION include/orocos/vicon)

